Fix production mode profile

--- a/pom.xml
+++ b/pom.xml
@@ -69,12 +69,17 @@
 
     <profiles>
         <profile>
-            <id>productionMode</id>
+            <!-- Production mode can be activated with either property or profile -->
+            <id>production-mode</id>
             <activation>
                 <property>
                     <name>vaadin.productionMode</name>
                 </property>
             </activation>
+            <properties>
+                <vaadin.productionMode>true</vaadin.productionMode>
+            </properties>
+
 
             <dependencies>
                 <dependency>
