--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,13 @@
             <artifactId>flow-html-components</artifactId>
             <version>2.0-SNAPSHOT</version>
         </dependency>
+
+        <!-- TODO remove it and fix the actual problem in https://github.com/vaadin/flow/issues/5426 -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.7</version>
+        </dependency>
     </dependencies>
 
     <build>
