Use only one npm goal

--- a/pom.xml
+++ b/pom.xml
@@ -149,8 +149,7 @@
                 <executions>
                     <execution>
                         <goals>
-                            <goal>update-npm-dependencies</goal>
-                            <goal>update-imports</goal>
+                            <goal>update-frontend</goal>
                         </goals>
                     </execution>
                 </executions>
