--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,16 @@
                 <artifactId>vaadin-grid-flow</artifactId>
                 <version>3.1-SNAPSHOT</version>
             </dependency>
+
+            <!--
+            this version contains a fix for closure-compiler dependencies
+            More info: https://github.com/vaadin/flow/issues/5554
+            -->
+            <dependency>
+                <groupId>com.vaadin</groupId>
+                <artifactId>vaadin-spring</artifactId>
+                <version>12.0-SNAPSHOT</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
