--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8080
 # This is a workaround for https://github.com/vaadin/spring/issues/381
 spring.servlet.multipart.enabled = false
+
+logging.level.org.atmosphere = warn
