Ensure app is run in npm mode

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=8080
 # This is a workaround for https://github.com/vaadin/spring/issues/381
 spring.servlet.multipart.enabled = false
+# Ensure application is run in Vaadin 14/npm mode
+vaadin.compatibilityMode = false
+
 
 logging.level.org.atmosphere = warn
