--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "no-name",
   "license": "UNLICENSED",
   "dependencies": {
-    "@polymer/polymer": "3.2.0",
-    "@webcomponents/webcomponentsjs": "^2.2.10",
     "@vaadin/flow-deps": "./target/frontend",
-    "@vaadin/router": "^1.4.1"
+    "@vaadin/router": "^1.4.1",
+    "@webcomponents/webcomponentsjs": "^2.2.10",
+    "lit-element": "^2.2.1"
   },
   "devDependencies": {
     "webpack": "4.30.0",
