Increase timeout of spring-boot-maven-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <wait>1000</wait>
+                    <maxAttempts>100</maxAttempts>
+                </configuration>
             </plugin>
 
             <!--
