--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "@vaadin/flow-deps": "./target/frontend",
     "@vaadin/router": "^1.4.3",
     "@webcomponents/webcomponentsjs": "^2.2.10",
-    "lit-element": "^2.2.1"
+    "lit-element": "^2.2.1",
+    "@polymer/polymer": "3.2.0"
   },
   "devDependencies": {
     "webpack": "4.30.0",
@@ -16,6 +17,8 @@
     "webpack-merge": "4.2.1",
     "raw-loader": "3.0.0",
     "typescript": "3.5.3",
-    "awesome-typescript-loader": "5.2.1"
-  }
+    "awesome-typescript-loader": "5.2.1",
+    "compression-webpack-plugin": "3.0.0"
+  },
+  "vaadinAppPackageHash": "bfa56a3401120d19ebf20b1c76af890ee925bbd1ab0da40402542a858d6ca01a"
 }
