--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "raw-loader": "3.0.0",
     "typescript": "3.5.3",
     "awesome-typescript-loader": "5.2.1",
-    "compression-webpack-plugin": "3.0.0"
+    "compression-webpack-plugin": "3.0.0",
+    "html-webpack-plugin": "3.2.0"
   },
   "vaadinAppPackageHash": "bfa56a3401120d19ebf20b1c76af890ee925bbd1ab0da40402542a858d6ca01a"
 }
