Run integration tests on PR validation build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,18 @@
 language: java
-jdk: oraclejdk8
+jdk: openjdk8
 # Run on a dedicated Trusty VM to avoid random problems like "User limit of inotify watches reached"
 sudo: required
-dist: trusty
+dist: xenial
+
+addons:
+  chrome: stable
 
 before_install:
   # Disable all Travis default repositories
   - sed -i "s/activeByDefault>true</activeByDefault>false</g"  ~/.m2/settings.xml
 
 script:
-  - mvn -B -e -V clean verify
+  - mvn -B -e -V clean verify -Pintegration-tests
 
 # Cache requires a master build
 branches:
