--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "raw-loader": "3.0.0",
     "typescript": "3.5.3",
     "awesome-typescript-loader": "5.2.1",
-    "compression-webpack-plugin": "3.0.0"
+    "compression-webpack-plugin": "3.0.0",
+    "html-webpack-plugin": "3.2.0",
+    "script-ext-html-webpack-plugin": "2.1.4"
   },
-  "vaadinAppPackageHash": "bfa56a3401120d19ebf20b1c76af890ee925bbd1ab0da40402542a858d6ca01a"
+  "vaadinAppPackageHash": "c5f5409e8c46cf1a45e6596415747b92e8c980558b3b8e541841245ef19a0afd"
 }
