--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,5 @@
 tasks:
-  - init: mvn install -Pproduction && node_modules/.bin/webpack-dev-server | while read line; do if [[ $line == *"Compile"* ]] ; then pkill -9 -f webpack-dev-server ; fi ; done
+  - init: mvn install spring-boot:start spring-boot:stop
 
     command: mvn
 ports:
