--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@vaadin/vaadin-split-layout": "4.1.1",
     "@vaadin/vaadin-combo-box": "5.0.9",
     "@vaadin/vaadin-cookie-consent": "1.1.2",
-    "@vaadin/vaadin-core-shrinkwrap": "15.0.0-alpha11",
+    "@vaadin/vaadin-core-shrinkwrap": "15.0.0-alpha12",
     "@vaadin/vaadin-upload": "4.2.2",
     "@vaadin/vaadin-dialog": "2.2.1",
     "@vaadin/vaadin-select": "2.1.6",
@@ -21,12 +21,12 @@
     "@vaadin/vaadin-board": "2.1.1",
     "@vaadin/vaadin-notification": "1.4.0",
     "@vaadin/vaadin-charts": "6.2.4",
-    "@vaadin/vaadin-grid-pro": "2.0.5",
+    "@vaadin/vaadin-grid-pro": "2.0.6",
     "@vaadin/vaadin-progress-bar": "1.1.2",
-    "@vaadin/vaadin-shrinkwrap": "15.0.0-alpha11",
+    "@vaadin/vaadin-shrinkwrap": "15.0.0-alpha12",
     "@vaadin/vaadin-ordered-layout": "1.1.0",
     "@vaadin/vaadin-login": "1.0.1",
-    "@vaadin/vaadin-button": "2.2.1",
+    "@vaadin/vaadin-button": "2.2.2",
     "@vaadin/vaadin-date-picker": "4.0.5",
     "@vaadin/vaadin-text-field": "2.5.3",
     "@vaadin/vaadin-menu-bar": "1.0.3",
@@ -35,7 +35,7 @@
     "@polymer/iron-list": "3.0.2",
     "@vaadin/vaadin-confirm-dialog": "1.1.5",
     "@vaadin/vaadin-list-box": "1.2.0",
-    "@vaadin/vaadin-checkbox": "2.2.10",
+    "@vaadin/vaadin-checkbox": "2.2.12",
     "@vaadin/vaadin-details": "1.0.1",
     "@polymer/iron-icon": "3.0.1",
     "@vaadin/vaadin-time-picker": "2.0.4",
@@ -44,7 +44,8 @@
     "@vaadin/vaadin-radio-button": "1.2.3",
     "@vaadin/vaadin-lumo-styles": "1.5.0",
     "@vaadin/vaadin-material-styles": "1.2.3",
-    "@vaadin/vaadin-rich-text-editor": "1.1.1"
+    "@vaadin/vaadin-rich-text-editor": "1.1.1",
+    "@vaadin/vaadin-custom-field": "1.0.10"
   },
   "devDependencies": {
     "webpack": "4.30.0",
@@ -72,7 +73,7 @@
       "@vaadin/vaadin-split-layout": "4.1.1",
       "@vaadin/vaadin-combo-box": "5.0.9",
       "@vaadin/vaadin-cookie-consent": "1.1.2",
-      "@vaadin/vaadin-core-shrinkwrap": "15.0.0-alpha11",
+      "@vaadin/vaadin-core-shrinkwrap": "15.0.0-alpha12",
       "@vaadin/vaadin-upload": "4.2.2",
       "@vaadin/vaadin-dialog": "2.2.1",
       "@vaadin/vaadin-select": "2.1.6",
@@ -81,12 +82,12 @@
       "@vaadin/vaadin-board": "2.1.1",
       "@vaadin/vaadin-notification": "1.4.0",
       "@vaadin/vaadin-charts": "6.2.4",
-      "@vaadin/vaadin-grid-pro": "2.0.5",
+      "@vaadin/vaadin-grid-pro": "2.0.6",
       "@vaadin/vaadin-progress-bar": "1.1.2",
-      "@vaadin/vaadin-shrinkwrap": "15.0.0-alpha11",
+      "@vaadin/vaadin-shrinkwrap": "15.0.0-alpha12",
       "@vaadin/vaadin-ordered-layout": "1.1.0",
       "@vaadin/vaadin-login": "1.0.1",
-      "@vaadin/vaadin-button": "2.2.1",
+      "@vaadin/vaadin-button": "2.2.2",
       "@vaadin/vaadin-date-picker": "4.0.5",
       "@vaadin/vaadin-text-field": "2.5.3",
       "@vaadin/vaadin-menu-bar": "1.0.3",
@@ -95,7 +96,7 @@
       "@polymer/iron-list": "3.0.2",
       "@vaadin/vaadin-confirm-dialog": "1.1.5",
       "@vaadin/vaadin-list-box": "1.2.0",
-      "@vaadin/vaadin-checkbox": "2.2.10",
+      "@vaadin/vaadin-checkbox": "2.2.12",
       "@vaadin/vaadin-details": "1.0.1",
       "@polymer/iron-icon": "3.0.1",
       "@vaadin/vaadin-time-picker": "2.0.4",
@@ -104,7 +105,8 @@
       "@vaadin/vaadin-radio-button": "1.2.3",
       "@vaadin/vaadin-lumo-styles": "1.5.0",
       "@vaadin/vaadin-material-styles": "1.2.3",
-      "@vaadin/vaadin-rich-text-editor": "1.1.1"
+      "@vaadin/vaadin-rich-text-editor": "1.1.1",
+      "@vaadin/vaadin-custom-field": "1.0.10"
     },
     "devDependencies": {
       "webpack-babel-multi-target-plugin": "2.3.3",
@@ -120,6 +122,6 @@
       "webpack-merge": "4.2.2",
       "webpack-dev-server": "3.9.0"
     },
-    "hash": "98a3dd248dee9d1f60b7bdc5d2fdc3d5795cc993dfdd4fa3130b527b8bb5e0e1"
+    "hash": "9bc726bf36abb49482a7e00d9ccbbd12d913bf1f8f4c1ded63410a7b514dac48"
   }
 }
