--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,9 @@
     "experimentalDecorators": true
   },
   "include": [
-    "frontend/**/*.ts", "frontend/index.js"
+    "frontend/**/*.ts",
+    "frontend/index.js",
+    "types.d.ts"
   ],
   "exclude": []
 }
