--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ server.port=8080
 # Ensure application is run in Vaadin 14/npm mode
 vaadin.compatibilityMode = false
 logging.level.org.atmosphere = warn
+
+# To improve the performance during development. 
+# For more information https://vaadin.com/docs/v14/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
+# vaadin.whitelisted-packages= org/vaadin/example
