--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.port=8080
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
+
+# To improve the performance during development. 
+# For more information https://vaadin.com/docs/v16/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
+# vaadin.whitelisted-packages= org/vaadin/example
