--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!-- Bean validation implementation-->
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
