Add plugin repo definition

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,17 @@
             </snapshots>
         </repository>
     </repositories>
+    
+    <pluginRepositories>
+        <!-- The order of definitions matters. Explicitly defining central here to make sure it has the highest priority. -->
+        <pluginRepository>
+            <id>central</id>
+            <url>https://repo.maven.apache.org/maven2</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository> 
+    </pluginRepositories>
 
     <dependencyManagement>
         <dependencies>
