Use recommended extensions also in Gitpod

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,3 +5,8 @@ tasks:
 ports:
   - port: 8080
     onOpen: open-preview
+vscode:
+  extensions:
+    - runem.lit-plugin@1.2.1:llHUlx8TJ6tFKGa1t6dpLQ==
+    - vscjava.vscode-java-test@0.27.0:gNh98vNbqtZC6ydHasFxAQ==
+    - pivotal.vscode-spring-boot@1.23.0:1iLvjTfznJrV611qRUeOHg==
